--- a/fe/my-app/package.json
+++ b/fe/my-app/package.json
@@ -10,10 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.8",
+    "axios": "^0.21.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "rxjs": "^7.2.0",
     "typescript": "^4.1.2",
+    "uikit": "^3.7.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
