--- a/fe/my-app/package.json
+++ b/fe/my-app/package.json
@@ -19,7 +19,7 @@
     "react-scripts": "4.0.3",
     "rxjs": "^7.2.0",
     "typescript": "^4.1.2",
-    "uikit": "^3.7.0",
+    "uikit": "^3.7.1-dev.d366bdf84",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
