--- a/fe/my-app/package.json
+++ b/fe/my-app/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "tsyringe": "^4.6.0",
     "typescript": "^4.1.2",
     "uikit": "^3.7.1-dev.d366bdf84",
     "web-vitals": "^1.0.1"
