--- a/fe/my-app/tsconfig.json
+++ b/fe/my-app/tsconfig.json
@@ -22,7 +22,8 @@
     "strictPropertyInitialization": false,
     "jsx": "react-jsx",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "strictNullChecks": false
   },
   "include": [
     "src"
