--- a/be/monolith/AmicaPlus/AmicaPlus.csproj
+++ b/be/monolith/AmicaPlus/AmicaPlus.csproj
@@ -8,8 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AmicaPlus.Contracts\AmicaPlus.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
