--- a/be/monolith/AmicaPlus/appsettings.json
+++ b/be/monolith/AmicaPlus/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "123",
+    "Issuer": "AmicaPlus.com"
+  }
 }
