--- a/be/monolith/AmicaPlus.Business/AmicaPlus.Business.csproj
+++ b/be/monolith/AmicaPlus.Business/AmicaPlus.Business.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
+  </ItemGroup>
+
 </Project>
