--- a/be/monolith/AmicaPlus.WebApi/AmicaPlus.WebApi.csproj
+++ b/be/monolith/AmicaPlus.WebApi/AmicaPlus.WebApi.csproj
@@ -5,6 +5,11 @@
     <UserSecretsId>06d5ff33-c5fb-480c-9aeb-8adfde5a2ca9</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+    <RootNamespace>AmicaPlus</RootNamespace>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
 
   <ItemGroup>
