--- a/be/monolith/AmicaPlus.WebApi/AmicaPlus.WebApi.csproj
+++ b/be/monolith/AmicaPlus.WebApi/AmicaPlus.WebApi.csproj
@@ -5,7 +5,7 @@
     <UserSecretsId>06d5ff33-c5fb-480c-9aeb-8adfde5a2ca9</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
-    <RootNamespace>AmicaPlus</RootNamespace>
+    <RootNamespace>AmicaPlus.WebApi</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -14,12 +14,18 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AmicaPlus.Business\AmicaPlus.Business.csproj" />
     <ProjectReference Include="..\AmicaPlus.Contracts\AmicaPlus.Contracts.csproj" />
+    <ProjectReference Include="..\AmicaPlus.Modules\AmicaPlus.Mapping.csproj" />
   </ItemGroup>
 
 </Project>
