--- a/be/monolith/AmicaPlus.Business.Model/AmicaPlus.ResultSets.csproj
+++ b/be/monolith/AmicaPlus.Business.Model/AmicaPlus.ResultSets.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AmicaPlus.Common\AmicaPlus.Common.csproj" />
+  </ItemGroup>
+
 </Project>
