--- a/be/monolith/AmicaPlus.Business/AmicaPlus.Business.csproj
+++ b/be/monolith/AmicaPlus.Business/AmicaPlus.Business.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -6,6 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AmicaPlus.DataAccess\AmicaPlus.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
