--- a/be/monolith/AmicaPlus.DataAccess/AmicaPlus.DataAccess.csproj
+++ b/be/monolith/AmicaPlus.DataAccess/AmicaPlus.DataAccess.csproj
@@ -5,16 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\AmicaPlus.Business.Model\AmicaPlus.ResultSets.csproj" />
+    <ProjectReference Include="..\AmicaPlus.DataAccess.Models\AmicaPlus.DataAccess.Models.csproj" />
+    <ProjectReference Include="..\AmicaPlus.Modules\AmicaPlus.Mapping.csproj" />
   </ItemGroup>
 
 </Project>
