--- a/be/monolith/Amiq.Contracts/Amiq.Contracts.csproj
+++ b/be/monolith/Amiq.Contracts/Amiq.Contracts.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Amiq.Common\Amiq.Common.csproj" />
+    <ProjectReference Include="..\Amiq.Enums\Amiq.Enums.csproj" />
   </ItemGroup>
 
 </Project>
