--- a/be/monolith/Amiq.WebApi/appsettings.json
+++ b/be/monolith/Amiq.WebApi/appsettings.json
@@ -7,8 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "Jwt": {
-    "Key": "123",
-    "Issuer": "Amiq.com"
+  "ApplicationSettings": {
+    "Jwt": {
+      "Key": "kdas8dad8ah2d10123daslkd2312l213j1k31dmasdjklk123",
+      "Issuer": "Amiq.com"
+    }
   }
 }
