--- a/fe/package.json
+++ b/fe/package.json
@@ -13,6 +13,8 @@
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
+    "history": "^5.0.1",
+    "http-status-codes": "^2.1.4",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
