--- a/fe/package.json
+++ b/fe/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.4.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "tsyringe": "^4.6.0",
