--- a/fe/package.json
+++ b/fe/package.json
@@ -23,7 +23,6 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "recoil": "^0.4.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "reflect-metadata": "^0.1.13",
@@ -31,7 +30,8 @@
     "tsyringe": "^4.6.0",
     "typescript": "^4.1.2",
     "uikit": "^3.7.1-dev.d366bdf84",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
