--- a/be/monolith/Amiq.FakeDataGenerator/Amiq.FakeDataGenerator.csproj
+++ b/be/monolith/Amiq.FakeDataGenerator/Amiq.FakeDataGenerator.csproj
@@ -2,14 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <OutputType>Exe</OutputType>
+    <StartupObject>Amiq.FakeDataGenerator.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="10.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Amiq.Contracts\Amiq.Contracts.csproj" />
     <ProjectReference Include="..\Amiq.DataAccess.Models\Amiq.DataAccess.Models.csproj" />
   </ItemGroup>
 
