--- a/be/monolith/Amiq.FakeDataGenerator/Amiq.FakeDataGenerator.csproj
+++ b/be/monolith/Amiq.FakeDataGenerator/Amiq.FakeDataGenerator.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Amiq.DataAccess.Models\Amiq.DataAccess.Models.csproj" />
   </ItemGroup>
 
