--- a/be/monolith/Amiq.Business/Amiq.Business.csproj
+++ b/be/monolith/Amiq.Business/Amiq.Business.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Amiq.DataAccess\Amiq.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="GroupEvent\BusinesssRules\" />
+  </ItemGroup>
+
 </Project>
