--- a/be/microservices/k8s/ocelot-depl.yaml
+++ b/be/microservices/k8s/ocelot-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: ocelotservice
-          image: ocelotservice
+          image: amiq-ocelot-gateway
           imagePullPolicy: Never
 ---
 apiVersion: v1
