--- a/be/microservices/k8s/post-depl.yaml
+++ b/be/microservices/k8s/post-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: postservice
-          image: postservice
+          image: amiq-post
           imagePullPolicy: Never
 ---
 apiVersion: v1
