--- a/be/microservices/Amiq.Services/Amiq.Services.Group/Amiq.Services.Group/Properties/launchSettings.json
+++ b/be/microservices/Amiq.Services/Amiq.Services.Group/Amiq.Services.Group/Properties/launchSettings.json
@@ -1,22 +1,14 @@
 {
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:10090",
-      "sslPort": 44313
+      "applicationUrl": "http://localhost:14540",
+      "sslPort": 44320
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "Amiq.Services.Group": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -24,8 +16,16 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
-      "dotnetRunMessages": "true"
+      "applicationUrl": "https://localhost:7062;http://localhost:5062",
+      "dotnetRunMessages": true
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     },
     "Docker": {
       "commandName": "Docker",
