--- a/be/microservices/Amiq.Services/Amiq.Services.Group/Amiq.Services.Group/Dockerfile
+++ b/be/microservices/Amiq.Services/Amiq.Services.Group/Amiq.Services.Group/Dockerfile
@@ -1,16 +1,16 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["Amiq.Services.Group.csproj", "."]
-RUN dotnet restore "./Amiq.Services.Group.csproj"
+COPY ["Amiq.Services.Group/Amiq.Services.Group.csproj", "Amiq.Services.Group/"]
+RUN dotnet restore "Amiq.Services.Group/Amiq.Services.Group.csproj"
 COPY . .
-WORKDIR "/src/."
+WORKDIR "/src/Amiq.Services.Group"
 RUN dotnet build "Amiq.Services.Group.csproj" -c Release -o /app/build
 
 FROM build AS publish
