--- a/be/microservices/Amiq.ApiGateways/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp/appsettings.json
+++ b/be/microservices/Amiq.ApiGateways/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationSettings": {
+    "Jwt": {
+      "Key": "kdas8dad8ah2d10123daslkd2312l213j1k31dmasdjklk123",
+      "Issuer": "Amiq.com",
+      "PrivateKey": "7ckg9wCjH5h0pKIX5FgyQdZcwNZlsGmp0NXBhMzmnvYDlGPLq2adXjO_kmZPEUdBFo5T-qWVyhqyj6Wrb8w9-A"
+    }
+  }
 }
