--- a/be/monolith/Amiq.WebApi/appsettings.json
+++ b/be/monolith/Amiq.WebApi/appsettings.json
@@ -10,7 +10,8 @@
   "ApplicationSettings": {
     "Jwt": {
       "Key": "kdas8dad8ah2d10123daslkd2312l213j1k31dmasdjklk123",
-      "Issuer": "Amiq.com"
+      "Issuer": "Amiq.com",
+      "PublicKey": "7ckg9wCjH5h0pKIX5FgyQdZcwNZlsGmp0NXBhMzmnvYDlGPLq2adXjO_kmZPEUdBFo5T-qWVyhqyj6Wrb8w9-A"
     }
   }
 }
