--- a/be/microservices/Amiq.ApiGateways/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp.csproj
+++ b/be/microservices/Amiq.ApiGateways/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Ocelot.Cache.CacheManager" Version="17.0.0" />
     <PackageReference Include="Ocelot.Provider.Consul" Version="17.0.0" />
     <PackageReference Include="Ocelot.Provider.Eureka" Version="17.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,6 +28,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
