--- a/be/microservices/Amiq.Services/Amiq.Services.Group/Amiq.Services.Group/Amiq.Services.Group.csproj
+++ b/be/microservices/Amiq.Services/Amiq.Services.Group/Amiq.Services.Group/Amiq.Services.Group.csproj
@@ -10,7 +10,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Amiq.Services.BusinessLayer\Amiq.Services.BusinessLayer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Base\" />
   </ItemGroup>
 
 </Project>
