--- a/be/microservices/Amiq.Services/Amiq.Services.Group/Amiq.Services.Group/Dockerfile
+++ b/be/microservices/Amiq.Services/Amiq.Services.Group/Amiq.Services.Group/Dockerfile
@@ -1,5 +1,3 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
@@ -7,7 +5,7 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["Amiq.Services.Group/Amiq.Services.Group.csproj", "Amiq.Services.Group/"]
+COPY ["Amiq.Services.Group.csproj", "Amiq.Services.Group/"]
 RUN dotnet restore "Amiq.Services.Group/Amiq.Services.Group.csproj"
 COPY . .
 WORKDIR "/src/Amiq.Services.Group"
