--- a/be/microservices/Amiq.ApiGateways/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp.csproj
+++ b/be/microservices/Amiq.ApiGateways/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Ocelot" Version="17.0.0" />
     <PackageReference Include="Ocelot.Cache.CacheManager" Version="17.0.0" />
     <PackageReference Include="Ocelot.Provider.Consul" Version="17.0.0" />
-    <PackageReference Include="Ocelot.Provider.Eureka" Version="17.0.0" />
+    <PackageReference Include="Ocelot.Provider.Polly" Version="17.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.2.88" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.1" />
   </ItemGroup>
