--- a/be/microservices/k8s/group-depl.yaml
+++ b/be/microservices/k8s/group-depl.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: group-deployment
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: groupservice
@@ -16,9 +16,13 @@ spec:
         - name: groupservice
           image: amiqservicesgroup
           imagePullPolicy: Never
-          env:
-            - name: DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE
-              value: 'false'
+          resources:
+            requests:
+              cpu: "300m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
 ---
 apiVersion: v1
 kind: Service
@@ -29,15 +33,7 @@ spec:
   selector:
     app: groupservice
   ports:
-    - name: groupservice-1
+    - name: groupservice
       protocol: TCP
-      port: 81
-      targetPort: 80
-    - name: groupservice-2
-      protocol: TCP
-      port: 82
-      targetPort: 80
-    - name: groupservice-3
-      protocol: TCP
-      port: 83
+      port: 80
       targetPort: 80
