--- a/be/monolith/monolith-depl.yaml
+++ b/be/monolith/monolith-depl.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: monolith-deployment
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: monolithservice
@@ -16,6 +16,9 @@ spec:
         - name: monolithservice
           image: amiq-webapi
           imagePullPolicy: Never
+          env:
+            - name: DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE
+              value: 'false'
 ---
 apiVersion: v1
 kind: Service
@@ -23,6 +26,20 @@ metadata:
   name: monolith-clusterip-srv
 spec:
   type: ClusterIP
+  selector:
+    app: monolithservice
+  ports:
+    - name: monolithservice
+      protocol: TCP
+      port: 80
+      targetPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: monolithservice-srv
+spec:
+  type: NodePort
   selector:
     app: monolithservice
   ports:
