--- a/be/microservices/Amiq.Services/Amiq.Services.Chat/package.json
+++ b/be/microservices/Amiq.Services/Amiq.Services.Chat/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "rest-api-nodejs-mongodb",
+  "name": "backend",
   "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
-    "test": "nyc _mocha --timeout 10000 --exit --report lcovonly -- -R spec",
-    "lint": "eslint --fix --config .eslintrc.json \"**/*.js\""
-  },
+  "description": "",
+  "main": "index.js",
   "dependencies": {
-    "bcrypt": "^3.0.6",
-    "codacy-coverage": "^3.4.0",
-    "cookie-parser": "~1.4.3",
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "amqplib": "^0.8.0",
+    "body-parser": "^1.19.1",
+    "compression": "^1.7.4",
+    "concurrently": "^4.1.2",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
-    "express": "~4.16.0",
-    "express-jwt": "^5.3.1",
-    "express-validator": "^6.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "mocha-lcov-reporter": "^1.3.0",
-    "moment": "^2.24.0",
-    "mongoose": "^5.7.6",
-    "morgan": "~1.9.0",
-    "nodemailer": "^6.3.1"
+    "dayjs": "^1.10.7",
+    "dotenv": "^8.6.0",
+    "express": "^4.17.2",
+    "helmet": "^3.23.3",
+    "lodash": "^4.17.21",
+    "merge-graphql-schemas": "^1.7.8",
+    "mongoose": "^5.13.14",
+    "nodemon": "^1.19.4",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "eslint": "^6.5.1",
-    "mocha": "^6.2.2",
-    "nodemon": "^1.19.4",
-    "nyc": "^14.1.1"
-  }
+    "@babel/node": "^7.16.8",
+    "@babel/register": "^7.16.9",
+    "babel-polyfill": "^6.26.0",
+    "request": "^2.88.2"
+  },
+  "scripts": {
+    "server": "nodemon --exec babel-node index.js"
+  },
+  "author": "Dima Vozniachuk",
+  "license": "ISC"
 }
