--- a/be/microservices/Amiq.Services/Amiq.Services.Notification/Amiq.Workers.Notification/Amiq.Workers.Notification.csproj
+++ b/be/microservices/Amiq.Services/Amiq.Services.Notification/Amiq.Workers.Notification/Amiq.Workers.Notification.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Amiq.Services.Notification.Common\Amiq.Services.Notification.Common.csproj" />
     <ProjectReference Include="..\Amiq.Services.Notification.DataAccessLayer.Models\Amiq.Services.Notification.DataAccessLayer.Models.csproj" />
   </ItemGroup>
 </Project>
