--- a/be/microservices/Amiq.Services/Amiq.Services.User/Amiq.Services.User/appsettings.json
+++ b/be/microservices/Amiq.Services/Amiq.Services.User/Amiq.Services.User/appsettings.json
@@ -6,6 +6,13 @@
     }
   },
   "AllowedHosts": "*",
+  "ApplicationSettings": {
+    "Jwt": {
+      "Key": "kdas8dad8ah2d10123daslkd2312l213j1k31dmasdjklk123",
+      "Issuer": "Amiq.com",
+      "PrivateKey": "7ckg9wCjH5h0pKIX5FgyQdZcwNZlsGmp0NXBhMzmnvYDlGPLq2adXjO_kmZPEUdBFo5T-qWVyhqyj6Wrb8w9-A"
+    }
+  },
   "Services": {
     "FriendshipService": "http://friendship-clusterip-srv:80"
   }
