--- a/be/microservices/Amiq.Services/Amiq.Services.User/Amiq.Services.User/Properties/launchSettings.json
+++ b/be/microservices/Amiq.Services/Amiq.Services.User/Amiq.Services.User/Properties/launchSettings.json
@@ -4,19 +4,11 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost/Amiq_User",
+      "applicationUrl": "http://localhost:5011",
       "sslPort": 0
     }
   },
   "profiles": {
-    "IIS": {
-      "commandName": "IIS",
-      "launchBrowser": true,
-      "launchUrl": "https://localhost/Amiq_User",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "Amiq.Services.User": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -29,7 +21,6 @@
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
