--- a/be/microservices/Amiq.Services.VS/Amiq.Services.Post/Amiq.Services.Post/Amiq.Services.Post.csproj
+++ b/be/microservices/Amiq.Services.VS/Amiq.Services.Post/Amiq.Services.Post/Amiq.Services.Post.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Amiq.Services.Base\Amiq.Services.Base.csproj" />
     <ProjectReference Include="..\..\Amiq.Services.Common\Amiq.Services.Common.csproj" />
   </ItemGroup>
 
