--- a/be/microservices/Amiq.Services.VS/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp.csproj
+++ b/be/microservices/Amiq.Services.VS/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp/Amiq.ApiGateways.WebApp.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="Ocelot.Provider.Consul" Version="17.0.0" />
     <PackageReference Include="Ocelot.Provider.Polly" Version="17.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.2.88" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +34,10 @@
 
   <ItemGroup>
     <Folder Include="Contracts\Group\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Amiq.Services.Base\Amiq.Services.Base.csproj" />
   </ItemGroup>
 
 </Project>
