--- a/be/microservices/Amiq.Services.VS/Amiq.Services.Friendship/Amiq.Services.Friendship/Amiq.Services.Friendship.csproj
+++ b/be/microservices/Amiq.Services.VS/Amiq.Services.Friendship/Amiq.Services.Friendship/Amiq.Services.Friendship.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Amiq.Services.Base\Amiq.Services.Base.csproj" />
     <ProjectReference Include="..\..\Amiq.Services.Common\Amiq.Services.Common.csproj" />
   </ItemGroup>
 
