--- a/fe/package.json
+++ b/fe/package.json
@@ -29,6 +29,7 @@
     "redux-thunk": "^2.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "socket.io-client": "^4.4.1",
     "tsyringe": "^4.6.0",
     "typescript": "^4.1.2",
     "uikit": "^3.7.1-dev.d366bdf84",
