--- a/be/microservices/Amiq.Services.VS/Amiq.Services.Base/Amiq.Services.Base.csproj
+++ b/be/microservices/Amiq.Services.VS/Amiq.Services.Base/Amiq.Services.Base.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.HeaderPropagation" Version="6.0.2" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.15.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1" />
   </ItemGroup>
