--- a/be/microservices/Amiq.Services/Amiq.Services.Chat/package.json
+++ b/be/microservices/Amiq.Services/Amiq.Services.Chat/package.json
@@ -11,16 +11,19 @@
     "body-parser": "^1.19.1",
     "compression": "^1.7.4",
     "concurrently": "^4.1.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "^1.10.7",
     "dotenv": "^8.6.0",
     "express": "^4.17.2",
     "helmet": "^3.23.3",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "merge-graphql-schemas": "^1.7.8",
     "mongoose": "^5.13.14",
     "nodemon": "^1.19.4",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "@babel/node": "^7.16.8",
