--- a/be/microservices/Amiq.Services/Amiq.Services.Chat/package.json
+++ b/be/microservices/Amiq.Services/Amiq.Services.Chat/package.json
@@ -8,6 +8,7 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
     "amqplib": "^0.8.0",
+    "axios": "^0.26.0",
     "body-parser": "^1.19.1",
     "compression": "^1.7.4",
     "concurrently": "^4.1.2",
@@ -17,6 +18,7 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.2",
     "helmet": "^3.23.3",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "merge-graphql-schemas": "^1.7.8",
