--- a/be/microservices/scripts/k8s/group-depl - Copy.yaml
+++ b/be/microservices/scripts/k8s/group-depl - Copy.yaml
@@ -16,6 +16,13 @@ spec:
         - name: groupservice
           image: amiqservicesgroup
           imagePullPolicy: Never
+          resources:
+            requests:
+              cpu: "300m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
 ---
 apiVersion: v1
 kind: Service
