--- a/be/microservices/Amiq.Services.VS/Amiq.Services.Post/Amiq.Services.Post/Dockerfile
+++ b/be/microservices/Amiq.Services.VS/Amiq.Services.Post/Amiq.Services.Post/Dockerfile
@@ -1,21 +1,7 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
 EXPOSE 80
+EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /src
-COPY ["Amiq.Services.Post/Amiq.Services.Post.csproj", "Amiq.Services.Post/"]
-RUN dotnet restore "Amiq.Services.Post/Amiq.Services.Post.csproj"
-COPY . .
-WORKDIR "/src/Amiq.Services.Post"
-RUN dotnet build "Amiq.Services.Post.csproj" -c Release -o /app/build
-
-FROM build AS publish
-RUN dotnet publish "Amiq.Services.Post.csproj" -c Release -o /app/publish
-
-FROM base AS final
-WORKDIR /app
-COPY --from=publish /app/publish .
+COPY ./bin/Release/net6.0 .
 ENTRYPOINT ["dotnet", "Amiq.Services.Post.dll"]
