--- a/be/microservices/Amiq.Services/Amiq.Services.Chat/Dockerfile
+++ b/be/microservices/Amiq.Services/Amiq.Services.Chat/Dockerfile
@@ -1,19 +1,13 @@
-FROM node:16
+FROM node:14.15.1
 
-# Create app directory
-WORKDIR /usr/src/app
+COPY ["package.json", "./"]
+COPY ["package-lock.json", "./"]
 
-# Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
-COPY package*.json ./
-
-RUN npm install
-# If you are building your code for production
-# RUN npm ci --only=production
-
-# Bundle app source
 COPY . .
 
+RUN npm install -g nodemon
+RUN npm install
+
 EXPOSE 4000
-CMD [ "node", "index.js" ]
+
+ENTRYPOINT npm run server
