--- a/be/microservices/Amiq.Services/Amiq.Services.Chat/package.json
+++ b/be/microservices/Amiq.Services/Amiq.Services.Chat/package.json
@@ -34,7 +34,8 @@
     "request": "^2.88.2"
   },
   "scripts": {
-    "server": "nodemon --exec babel-node index.js"
+    "server": "nodemon --exec babel-node index.js",
+    "server2": "babel-node index.js"
   },
   "author": "Dima Vozniachuk",
   "license": "ISC"
