--- a/be/microservices/scripts/k8s/chat-depl.yaml
+++ b/be/microservices/scripts/k8s/chat-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: chatservice
-          image: chatservice
+          image: amiqserviceschat
           imagePullPolicy: Never
 ---
 apiVersion: v1
@@ -29,4 +29,4 @@ spec:
     - name: chatservice
       protocol: TCP
       port: 80
-      targetPort: 80
+      targetPort: 4000
