--- a/be/microservices/scripts/k8s/post-depl.yaml
+++ b/be/microservices/scripts/k8s/post-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: postservice
-          image: amiqpost
+          image: amiqservicespost
           imagePullPolicy: Never
 ---
 apiVersion: v1
